# loops

./: .gitignore  CMakeLists.txt  README.md
devutils/: notes.md
devutils/docker/: README.md  dockerfile
examples/: bresenham.cpp  first.cpp  maxpool.cpp  minmaxloc.cpp  mnmp.cpp
include/loops/: defines.hpp  loops.hpp  loops.ipp
include/loopslayers/: loopslayers.h
loopslayers/: loopslayers.cpp
loopslayers/generators/: depthwiseconv.hpp  maxpool.hpp
src/: aarch64.cpp  aarch64.hpp  allocator.cpp  allocator.hpp  backend.cpp  backend.hpp  backend_aarch64.cpp  backend_aarch64.hpp  backend_intel64.cpp  backend_intel64.hpp  backend_riscV.cpp  backend_riscV.hpp  code_collecting.cpp  code_collecting.hpp  collections.cpp  collections.hpp  common.cpp  common.hpp  composer.cpp  composer.hpp  def_err.hpp  func_impl.cpp  func_impl.hpp  intel64.cpp  intel64.hpp  pipeline.cpp  pipeline.hpp  printer.cpp  printer.hpp  reg_allocator.cpp  reg_allocator.hpp  runtime.hpp
test/: test_aarch64.hpp  test_basic.hpp  test_intel64.hpp  test_math.hpp  testall.cpp  testperf.cpp  testregress.cpp  tests.cpp  tests.hpp
test/refasm/Intel64/: a_plus_b.tst  all_loads_all_stores.tst  arithm_arrs.tst  bresenham.tst  erode_msb_lsb.tst  min_max_scalar.tst  min_max_select.tst  nonnegative_odd.tst  triangle_types.tst
test/refasm/Intel64/Linux/: a_plus_b.tst  arithm_arrs.tst  min_max_scalar.tst  nullify_msb_lsb.tst  triangle_types.tst
test/refasm/Intel64/Windows/: arithm_arrs.tst  exponentiation_by_squaring_0.tst  exponentiation_by_squaring_1.tst  exponentiation_by_squaring_9.tst  instruction_set_test.tst
test/refasm/Intel64/bytecode/: all_loads_all_stores.tst  arithm_arrs.tst  bresenham.tst  instruction_set_test.tst  min_max_scalar.tst  min_max_select.tst  nonnegative_odd.tst  triangle_types.tst
test/refasm/aarch64/: a_plus_b.tst  all_loads_all_stores.tst  bresenham.tst  clear_lsb_msb_v.tst  compl_condition_diagnostic_failure.tst  erode_msb_lsb.tst  exp_f32.tst  exponentiation_by_squaring_0.tst  exponentiation_by_squaring_1.tst  exponentiation_by_squaring_9.tst  exponentiation_by_squaring_v_double_0.tst  exponentiation_by_squaring_v_double_4.tst  exponentiation_by_squaring_v_double_9.tst  exponentiation_by_squaring_v_float_0.tst  exponentiation_by_squaring_v_float_4.tst  exponentiation_by_squaring_v_float_9.tst  exponentiation_by_squaring_v_int32_t_0.tst  exponentiation_by_squaring_v_int32_t_4.tst  exponentiation_by_squaring_v_int32_t_9.tst  exponentiation_by_squaring_v_uint32_t_0.tst  exponentiation_by_squaring_v_uint32_t_4.tst  exponentiation_by_squaring_v_uint32_t_9.tst  helloworld_call.tst  instruction_set_test.tst  max_pool_13_13.tst  max_pool_3_3.tst  max_pool_5_5.tst  max_pool_9_9.tst  min_max_scalar.tst  min_max_select.tst  nonnegative_odd.tst  nullify_msb_lsb.tst  nullify_msb_lsb_v.tst  snake.tst  sort_double.tst  ten_args_to_sum.tst  triangle_types.tst
test/refasm/aarch64/bytecode/: a_plus_b.tst  all_loads_all_stores.tst  bresenham.tst  clear_lsb_msb_v.tst  erode_msb_lsb.tst  exp_f32.tst  exponentiation_by_squaring_0.tst  exponentiation_by_squaring_1.tst  exponentiation_by_squaring_9.tst  exponentiation_by_squaring_v_double_0.tst  exponentiation_by_squaring_v_double_4.tst  exponentiation_by_squaring_v_double_9.tst  exponentiation_by_squaring_v_float_0.tst  exponentiation_by_squaring_v_float_4.tst  exponentiation_by_squaring_v_float_9.tst  exponentiation_by_squaring_v_int32_t_0.tst  exponentiation_by_squaring_v_int32_t_4.tst  exponentiation_by_squaring_v_int32_t_9.tst  exponentiation_by_squaring_v_uint32_t_0.tst  exponentiation_by_squaring_v_uint32_t_4.tst  exponentiation_by_squaring_v_uint32_t_9.tst  helloworld_call.tst  instruction_set_test.tst  max_pool_13_13.tst  max_pool_3_3.tst  max_pool_5_5.tst  max_pool_9_9.tst  min_max_scalar.tst  min_max_select.tst  nonnegative_odd.tst  nullify_msb_lsb.tst  nullify_msb_lsb_v.tst  snake.tst  sort_double.tst  ten_args_to_sum.tst  triangle_types.tst
test/refasm/aarch64/linux/: all_loads_all_stores.tst  big_immediates.tst  bresenham.tst  conditionpainter.tst  exp_f32.tst  exponentiation_by_squaring_0.tst  exponentiation_by_squaring_1.tst  exponentiation_by_squaring_9.tst  exponentiation_by_squaring_v_double_9.tst  exponentiation_by_squaring_v_float_0.tst  exponentiation_by_squaring_v_int32_t_0.tst  exponentiation_by_squaring_v_int32_t_9.tst  exponentiation_by_squaring_v_uint32_t_4.tst  fixed_power_0.tst  fixed_power_1.tst  fixed_power_9.tst  fixed_power_v_double_0.tst  fixed_power_v_double_4.tst  fixed_power_v_double_9.tst  fixed_power_v_float_0.tst  fixed_power_v_float_4.tst  fixed_power_v_float_9.tst  fixed_power_v_int32_t_0.tst  fixed_power_v_int32_t_4.tst  fixed_power_v_int32_t_9.tst  fixed_power_v_uint32_t_0.tst  fixed_power_v_uint32_t_4.tst  fixed_power_v_uint32_t_9.tst  helloworld_call.tst  instruction_set_test.tst  min_max_scalar.tst  min_max_select.tst  nonnegative_odd.tst  nullify_msb_lsb.tst  nullify_msb_lsb_v.tst  snake.tst  sort_double.tst  ten_args_to_sum.tst  triangle_types.tst
test/refasm/aarch64/macos/: a_plus_b.tst  all_loads_all_stores.tst  bresenham.tst  exponentiation_by_squaring_v_float_4.tst  exponentiation_by_squaring_v_float_9.tst  exponentiation_by_squaring_v_uint32_t_0.tst  exponentiation_by_squaring_v_uint32_t_9.tst  fixed_power_9.tst  fixed_power_v_double_4.tst  fixed_power_v_int32_t_4.tst  helloworld_call.tst  instruction_set_test.tst  min_max_scalar.tst  min_max_select.tst  nonnegative_odd.tst  snake.tst  sort_double.tst  ten_args_to_sum.tst
test/refasm/bytecode/: a_plus_b.tst  min_max_scalar.tst  nonnegative_odd.tst  triangle_types.tst
test/refasm/intel64/linux/: all_loads_all_stores.tst  arithm_arrs.tst  bresenham.tst  compl_condition_diagnostic_failure.tst  conditionpainter.tst  exponentiation_by_squaring_0.tst  (+14 more)
test/testperf/: depthwiseconv.cpp  depthwiseconv.hpp  dwctest.cpp  dwctest.hpp  mptest.cpp  mptest.hpp
test/testregress/: test_aarch64.cpp  test_aarch64.hpp  test_basic.cpp  test_basic.hpp  test_calls.cpp  test_intel64.cpp  test_intel64.hpp  test_math.cpp  test_math.hpp  test_riscV.cpp  test_riscV.hpp
(+119 files in other folders)
